prevent the layout shift from `resizable` loading after DOM content

--- a/css/resizable.css
+++ b/css/resizable.css
@@ -1,6 +1,7 @@
 
 .resizable {
     position: relative;
+    width: clamp(50ch, var(--resizble-width), 100%);
 }
 .resizer-right {
     width: 5px;
